--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
   "devDependencies": {
     "@commitlint/cli": "^20.3.1",
     "@commitlint/config-conventional": "^20.3.1",
+    "@eslint/js": "^9.39.2",
     "eslint": "^9.39.2",
-    "eslint-config-next": "^16.1.2",
-    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-astro": "^1.5.0",
     "eslint-plugin-prettier": "^5.5.5",
+    "globals": "^17.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^16.2.7",
-    "prettier": "^3.8.0"
+    "prettier": "^3.8.0",
+    "prettier-plugin-astro": "^0.14.1"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
