--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,24 @@
-# Node
+# build output
+dist/
+
+# generated types
+.astro/
+
+# dependencies
 node_modules/
+
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
-# Build
-.next/
-out/
-dist/
+# environment variables
+.env
+.env.production
 
-# Env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Misc
+# macOS-specific files
 .DS_Store
-*.log
+
+# jetbrains setting folder
+.idea/
