--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
+  "name": "carloscndev-frontend",
+  "version": "0.1.0",
+  "description": "A Astro application",
   "scripts": {
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "format": "prettier --write .",
     "prepare": "husky install"
+  },
+  "dependencies": {
+    "astro": "^5.16.11"
   },
   "devDependencies": {
     "@commitlint/cli": "^20.3.1",
