--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "carloscndev-frontend",
   "version": "0.1.0",
+  "type": "module",
   "description": "A Astro application",
   "scripts": {
     "dev": "astro dev",
@@ -18,7 +19,10 @@
     "@commitlint/cli": "^20.3.1",
     "@commitlint/config-conventional": "^20.3.1",
     "@eslint/js": "^9.39.2",
+    "@typescript-eslint/parser": "^8.53.0",
+    "astro-eslint-parser": "^1.2.2",
     "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-astro": "^1.5.0",
     "eslint-plugin-prettier": "^5.5.5",
     "globals": "^17.0.0",
