fix: prettier and eslint config with astro

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
     "prepare": "husky install"
   },
@@ -32,6 +33,10 @@
     "prettier-plugin-astro": "^0.14.1"
   },
   "lint-staged": {
+    "*.astro": [
+      "eslint --fix",
+      "prettier --write"
+    ],
     "*.{js,jsx,ts,tsx}": [
       "eslint --fix",
       "prettier --write"
