--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-astro": "^1.5.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-prettier": "^5.5.5",
     "globals": "^17.0.0",
     "husky": "^8.0.3",
